フロントの実装

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+ 
+ *{
+   box-sizing:border-box;
+ }
+
+body {
+  background-image: url("toppage.jpg");
+  background-size:cover;
+
+}
