--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require_self
  */
+@import 'font_awesome5_webfont';
+@import 'font_awesome5.css';
  
  *{
    box-sizing:border-box;
