--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -12,15 +12,17 @@ align-items: center;
 }
 
 .header-logo{
-  font-size: 40px;
-  border:3px double #fff;
-  border-radius: 3px 0 3px 0;
+  width:35vw;
+  font-size: 30px;
+  border:5px solid #fff;
+  border-radius: 5px 50px 50px 5px;
   color: #fff;
   letter-spacing:0.1em;
   text-decoration: none;
   margin-left:3vw;
   font-family: serif;
-  padding:0.25em 1em;
+  padding:0.5em 1em 0.5em 0.5em;
+  overflow: scroll;
 }
 
 
