--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -9,6 +9,8 @@
 
   display:flex;
 align-items: center;
+justify-content: space-between;
+
 }
 
 .header-logo{
@@ -19,10 +21,32 @@ align-items: center;
   color: #fff;
   letter-spacing:0.1em;
   text-decoration: none;
-  margin-left:3vw;
-  font-family: serif;
+  margin-left:2vw;
+  font-family:unset;
   padding:0.5em 1em 0.5em 0.5em;
-  overflow: scroll;
+  transition:all 1s;
 }
 
+.header-logo:hover{
+  border:5px double turquoise;
+  color:turquoise;
+}
 
+.header-lists{
+  display:flex;
+  margin-right:4vw;
+}
+
+.header-menu{
+  color:#fff;
+  font-size:17px;
+  text-decoration: none;
+  margin-right:3vw;
+  font-family:serif;
+  transition:all 1s;
+
+}
+.header-menu:hover{
+  border-bottom:2px solid turquoise;
+  color:turquoise;
+}
