--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="header-bar">
   <%= link_to "Otarue",root_path,class: "header-logo fas fa-plane-departure fa-3x" %>
   <ul class ="header-lists">
-    <li><%= link_to "このサイトについて" ,'#',class: "header-menu"%></li>
+    <li><%= link_to "このサイトについて" ,abouts_path,class: "header-menu"%></li>
     <li><%= link_to "ルートマップ" ,'#',class: "header-menu"%></li>
     <li><%= link_to "購入情報" ,'#',class: "header-menu"%></li>
     <li><%= link_to "お問い合わせ" ,'#',class: "header-menu"%></li>
