--- a/app/assets/stylesheets/otarue/otarue.css
+++ b/app/assets/stylesheets/otarue/otarue.css
@@ -2,3 +2,16 @@
   width:100vw;
   height:75vh; 
 }
+
+.main-catchcopy{
+  font-family: serif;
+  color:white;
+  font-size:35px;
+  margin-top: 20vh;
+  margin-left:3vw;
+  opacity: 0.7;
+}
+
+.main-catchcopy:first-letter{
+  font-size: 1.75em;
+}
