--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -1,35 +1,38 @@
 .header-top{
-  background-color: rgba(51,51,51,0.5);
   width:100vw;
   height:20vh;
 }
 
 .header-bar{
   height: 20vh;
-
   display:flex;
-align-items: center;
-justify-content: space-between;
-
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header-logo{
   width:35vw;
   font-size: 30px;
-  border:5px solid #fff;
   border-radius: 5px 50px 50px 5px;
   color: #fff;
   letter-spacing:0.1em;
   text-decoration: none;
+  margin-top:20vh;
   margin-left:2vw;
   font-family:unset;
   padding:0.5em 1em 0.5em 0.5em;
   transition:all 1s;
+
+}
+
+.header-logo img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
 }
 
 .header-logo:hover{
-  border:5px double turquoise;
-  color:turquoise;
+  opacity: 0.5;
 }
 
 .header-lists{
