--- a/app/assets/stylesheets/otarue/otarue.css
+++ b/app/assets/stylesheets/otarue/otarue.css
@@ -1,3 +1,4 @@
+
 .main-top{
   width:100vw;
   height:75vh; 
@@ -7,7 +8,7 @@
   font-family: serif;
   color:white;
   font-size:35px;
-  margin-top: 20vh;
+  padding-top: 20vh;
   margin-left:3vw;
   opacity: 0.7;
 }
