--- a/app/assets/stylesheets/about/about.scss
+++ b/app/assets/stylesheets/about/about.scss
@@ -1,3 +1,46 @@
-// Place all the styles related to the abouts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.about-main{
+  width:100vw;
+  height:75vh;
+  background-color:cornsilk ;
+  opacity:0.7;
+}
+
+.about-info{
+  width:80vw;
+  height:100%;
+  margin:0 auto;
+  opacity:0.8;
+}
+.about-headline-small{
+  font-size:15px;
+  text-align:center;
+  padding-top:2vh;
+  padding-right:15vw;
+  color:darkorange;
+}
+.about-headline{
+  font-size:28px;
+  text-align:center;
+}
+.about-navi{
+  font-size:17px;
+  padding-top:2vh;
+  text-align:center;
+  letter-spacing: 0.2em;
+  line-height:3em;
+}
+.about-btn{
+  display:inline-block;
+  max-width:180px;
+  background-color: #293b6a;
+  font-size:16px;
+  color:white;
+  text-decoration: none;
+  font-weight:bold;
+  padding:6px 16px;
+  border:1px dashed #fff;
+  box-shadow: 0 0 0 5px #293b6a;
+}
+.about-btn:hover{
+  border-style: solid;
+}
