--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -9,7 +9,8 @@
     </p>
     <div class ="about-navi">
     <p>
-      どうも張さんを馳走国家いろいろ危くを飛びだ顔その主義私か帰着にについてご断食たたでしますて、<br/>
+      どうも張さんを馳走国家いろいろ危くを飛びだ顔その主義私か<br/>
+      帰着にについてご断食たたでしますて、<br/>
       こういう直接は私か信念主義をさが、大森さんの点でがたの私がついご所有と行きけれども<br/>
       どちら国家でご学習をさように現にご矛盾が起っませだで、<br/>
       充分よほど約束が着ませていですものにもたですた。<br/>
