ビューファイルの実装

--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -17,7 +17,7 @@
       しかしところがお主意に用いよのはそう大変と教えうて、<br/>
       その人にもするですからという材料にありてみろならた。<br/>
   </p>
-  <%= link_to "ルートマップへ", "#", class: "about-btn" %>
+  <%= link_to "ルートマップへ", maps_path, class: "about-btn" %>
     </div>
   </div>
 </div>
