aboutページの調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,6 @@
   }
 
 body {
-  background-image: url("toppage.jpg");
-  background-size:cover;
-
+  color: rgb(254, 246, 238);
+  opacity:0.8;
 }
