--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,5 +1,30 @@
 <%= render "shared/header" %>
 <div class = "map-main">
+<p class ="map-info">
+<br/>下車する駅を選んでください
+</p>
+<div class ="map-menu">
+  <%= link_to "小樽駅下車", {anchor: "map-otaru-station"},class:"map-menu-btn" %>
+  <%= link_to "南小樽駅下車", {anchor: "map-south-station"},class:"map-menu-btn" %>
+  <%= link_to "車で来た", "#",class:"map-menu-btn" %>
+</div>
+
+<div class ="map-otaru-station", id ="map-otaru-station">
+</div>
+
+
+<div class ="map-south-station", id ="map-south-station">
+  <p class ="map-south-headline"> 
+    南小樽駅下車
+  </p>
+  <div class ="map-south-info">
+    <div class ="map-south-left">
+    </div>
+    <div class ="map-south-right">
+    </div>
+  </div>
+</div>
+
 </div>
 
 <%= render "shared/footer"%>
