--- a/app/views/otarues/index.html.haml
+++ b/app/views/otarues/index.html.haml
@@ -1,5 +1,6 @@
-= render "shared/header"
-.main-top
-  .main-catchcopy
-    #p 海と芸術の街,<br/><br/>　　小樽に行きませんか？
-= render "shared/footer"
+.main-wrapper
+  = render "shared/header"
+  .main-top
+    .main-catchcopy
+      #p 海と芸術の街,<br/><br/>　　小樽に行きませんか？
+  = render "shared/footer"
