--- a/app/assets/stylesheets/about/about.scss
+++ b/app/assets/stylesheets/about/about.scss
@@ -53,8 +53,6 @@
 }
 
 .about-img{
-  overflow: hidden;
-  position:relative;
   ul{
     width:90%;
     height:100%;
@@ -68,9 +66,8 @@
   }
 }
 .about-img li:nth-child(2){
-  padding-top:11%;
-  
+  padding-top:8vh;
 }
 .about-img li:nth-child(1){
-  padding-top:23%;
+  padding-top:16vh;
 }
