--- a/app/assets/stylesheets/about/about.scss
+++ b/app/assets/stylesheets/about/about.scss
@@ -2,7 +2,7 @@
   width:100vw;
   height:75vh;
   display:flex;
-  background:linear-gradient(135deg,#3b6cc7 50%, white 50%);
+  background:linear-gradient(135deg,#184baa 50%, white 50%);
 }
 .about-info-left{
   width:50%;
