--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,10 @@
  *{
    box-sizing:border-box;
    font-family:serif;
+   text-decoration: none;
   }
 
 body {
   color: rgb(254, 246, 238);
-  opacity:0.8;
+  opacity:0.9;
 }
