--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -4,66 +4,174 @@
 
 .map-main{
   width:100vw;
-  color: rgb(254, 246, 238);
-
 }
-
-.map-info{
+.map-headline{
+  color:#28292b;
+  width:50%;
+  margin:0 auto;
   text-align: center;
-  color:white;
-  font-size:27px;
-  padding-top:5vh;
-}
-
-.map-info::before{
-  content:'route map';
-  color:black;
-  font-size:20px;
+  padding-bottom:1vh;
+  border-bottom:1px solid #28292b;
+  .map-info{
+    font-size:23px;
+    padding-top:2vh;
+  }
+  .map-info-small{
+    padding-top:2vh;
+    line-height:2em;
+    letter-spacing: 0.2em;;
+  }
 }
 
 .map-menu{
-  margin-top:10vh;
-  display:flex;
+  width:100%;
+  height:500px;
+  margin-top:5vh;
+  ul{
+    height:100%;
+    display:flex;
+    justify-content: space-around;
+    li{
+      border:2px solid #184baa;
+      border-radius: 30px 30px 10px 10px;
+      background-color:#184baa;
+      width:25%;
+      a{
+        text-decoration: none;   
+      }
+      .map-menu-list{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        height:20%;
+        color:rgb(254, 246, 238);
+        font-size:20px;
+      }
+      img{
+        width:100%;
+        height:50%;
+        object-fit: cover;
+      }
+      .map-menu-info{
+        width:100%;
+        height:28%;
+        color:#184baa;
+        line-height:2em;
+        letter-spacing: 0.1em;
+        background-color:white;  
+        .map-menu-link{
+          height:30%;
+          display: flex;
+          align-items: center;
+          justify-content: center;            
+          text-align: center;
+          background-color:#184baa;
+          font-size:18px;
+          color:white;
+        }
+        .map-menu-link:hover{
+          opacity:0.8;
+        }
+      }
+    }
+  }
 }
-.map-menu-btn{
-  background-color: #293b6a;
-  display:inline-block;
-  max-width:180px;
-  background-color: #293b6a;
-  font-size:20px;
-  color:white;
-  text-decoration: none;
-  font-weight:bold;
-  padding:8px 25px;
-  border:1px dashed #fff;
-  box-shadow: 0 0 0 5px #293b6a;
-  margin: 0 auto;
 
-}
-.map-menu-btn:hover{
-  border-style: solid;
-}
 
 .map-otaru-station{
-  width:80%;
+  width:100%;
   height:600px;
   background-color:thistle;
   margin: 5vh auto;
 }
+
 .map-south-station{
-  width:80%;
+  width:100%;
   height:700px;
   background-color: white;
   margin: 5vh auto;
-}
-.map-south-headline{
-  font-size:20px;
-  text-align:center;
-  padding-top:3vh;
-}
-.map-south-info{
-  margin: 5vh auto;
-  width:90%;
-  height:500px;
-  background-color: aquamarine;
+  
+  .map-south-headline{
+    width:30%;
+    height:50px;
+    font-size:20px;
+    margin:0 auto;
+    text-align:center;
+    font-weight: bold;
+    color:#28292b;
+    padding-top:3vh;
+    border-bottom:1px solid #28292b;
+  }
+  .map-south-info{
+    width:90%;
+    height:500px;
+    display: flex;
+    margin: 5vh auto;
+    .map-south-left{
+      width:50%;
+      height:100%;
+      .map-south-main{
+        height:70%;
+        color:#28292b;
+        font-weight: bold;
+        ul{
+          padding-top:10%;
+          float:left;
+          li{
+            padding-top:5%;
+          }
+          a{
+            color:#28292b;
+          }
+        }
+      }
+      .map-south-option{
+        height:30%;
+        width:100%;
+        display:flex;
+        align-items: center;
+        ul{
+          width:50%;
+          li{
+            padding-top:5%;
+            color:#28292b;
+            a{
+              color:#28292b;
+              border:1px solid #28292b;
+              padding:8px 16px;
+              transition:0.7s;
+            }
+            a:hover{
+              background:#28292b;
+              color:white;
+            }
+          }
+        }
+        .map-south-google{
+          width:50%;
+          a{
+            background-color:white;
+            color:#28292b;
+            padding:80px 23px;
+            border:1px solid #28292b;
+            border-radius:100%;
+            transition:0.7s;
+          }
+          a:hover{
+            background:#28292b;
+            color:white;
+          }
+        }        
+      }
+    }
+    .map-south-right{
+      width:50%;
+      height:100%;
+      img{
+        width:100%;
+        height:100%;
+        object-fit: cover;;
+      }
+    }
+  }
 }
