--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <li><%= link_to "このサイトについて" ,abouts_path,class: "header-menu"%></li>
     <li><%= link_to "ルートマップ" ,maps_path,class: "header-menu"%></li>
     <li><%= link_to "購入情報" ,orders_path,class: "header-menu"%></li>
-    <li><%= link_to "お問い合わせ" ,'#',class: "header-menu"%></li>
+    <li><%= link_to "お問い合わせ" ,contacts_path,class: "header-menu"%></li>
   </ul>
   </div>
 
