--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -59,7 +59,7 @@
       <div class ="map-south-option">
       <ul>
       <li>いいね</li>
-      <li><%= link_to "ご意見・ご要望", "#" %></li>
+      <li><%= link_to "ご意見・ご要望", contacts_path %></li>
       </ul>
       <div class ="map-south-google">
       <%= link_to "Google Mapで開く",
