他ページのレイアウト調整

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,13 @@
 <%= render "shared/header" %>
 <div class ="order-main">
 
-  <div class ="order-headline">
+  <div class ="map-headline">
+    <i class="fas fa-suitcase fa-2x"></i>
+    <p class ="map-info">購入情報</p>
+    <p class ="map-info-small">
+    商品発送から到着まで３〜４日ほどお時間を頂きます。<br>
+    ※支払い方法はクレジットカードのみとなります。<br/>
+    </p>
   </div>
   <div class ="order-menu">
       <ul>
