--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -86,7 +86,7 @@
 
 .map-south-station{
   width:100%;
-  height:700px;
+  height:1500px;
   background-color: white;
   margin: 5vh auto;
   
@@ -174,8 +174,53 @@
       img{
         width:100%;
         height:100%;
-        object-fit: cover;;
+        object-fit: cover;
       }
     }
   }
+  .map-south-list{
+    width:90%;
+    height:200px;
+    margin:0 auto;
+    color:#28292b;
+    display:flex;
+    overflow: hidden;
+    h2{
+      width:100%;
+      height:25%;
+      text-align:center;
+      padding-top:2.5%;
+      background-color: beige;
+    }
+    ul{
+      width:100%;
+      height:75%;
+      display:flex;
+      li{
+        width:50%;
+        height:100%;
+        text-align:center;
+        img{
+          width:100%;
+          object-fit: cover;
+        }
+        a{
+          color:#28292b;
+        }
+      }
+      li:hover{
+        opacity:0.7;
+      }
+    }
+    .map-list-left{
+      width:50%;
+      border-right:1px solid #28292b;
+      }
+    .map-list-right{
+      width:50%;
+    }
+  }
+}
+#map-south-glass{
+  margin-top:15vh;
 }
