--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -96,6 +96,7 @@
         <%= link_to image_tag("maplink3.jpg"),"#" %>
         </li>
         <li>
+        <%= link_to "【北一硝子】","#"%>
         <%= link_to image_tag("maplink4.jpg"),"#" %>
         </li>
       </ul>
