重複部分の削除や文章・画像の調整

--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -4,10 +4,9 @@
   <div class = "about-info-left">
     <p class = "about-headline"><br/>このサイトについて</p>
     <div class ="about-navi">
-      小樽観光に行きまっしょう<br/>
-      どういう経路で行けば良いか分からない。<br/>
-      <br>
-      心の拠り所が小樽にある髙橋が案内します。<br/>
+      小樽観光を検討されている方へ<br/><br/>
+      どういう経路で行けば良いか<br/>
+      満遍無く回ることが出来るかを記載しております<br/>
       <br/>
       参考にして頂ければ幸いです。<br/>
     </div>
