リファクタリング・Rubocopの実施

--- a/app/views/shared/_error_message.html.erb
+++ b/app/views/shared/_error_message.html.erb
@@ -1,7 +1,6 @@
 <% if model.errors.any? %>
 
   <% model.errors.full_messages.each do |messages| %>
-  <li class="error"><%= messages %>
-  </li>
+    <li class="error"><%= messages %></li>
   <% end %>
 <% end %>
