--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -5,39 +5,35 @@
     <i class="fas fa-archway fa-2x"></i>
     <p class ="map-info" >下車する駅を選択してください</p>
     <p class ="map-info-small">
-    クリックで該当の箇所までリンクします。<br>
-    駅から近い順番で観光場所を記載しています。<br/>
-    私のおすすめは色んなお店がある南小樽駅！<br>
+      クリックで該当の箇所までリンクします。<br>
+      駅から近い順番で観光場所を記載しています。<br/>
+      私のおすすめは色んなお店がある南小樽駅！<br>
     </p>
   </div>
 
 <div class ="map-menu">
   <ul>
-  <li>
-  <%= link_to "小樽駅下車", '#',class:"map-menu-list" %>
-  <%= link_to  image_tag("map1.jpg"), '#'%>
-  <p class="map-menu-info">硝子館や小樽運河、小樽駅直結のバスから行けるおたる水族館や、天狗山目的の方におすすめです。<br/>
-  <%= link_to "改装中", '#',class:"map-menu-link"%>
-  </p>
-  </li>
-  <li>
-  <%= link_to "南小樽駅下車", {anchor: "map-south-station"},class:"map-menu-list"%>
-  <%= link_to image_tag("map2.jpg"), {anchor: "map-south-station"}  %>
-  <p class="map-menu-info">駅から見える海や、徒歩数分の圏内にあるオルゴール堂、小樽運河まで店舗が続いているのでおすすめです。<br/>
-  <%= link_to "詳細へ" ,{anchor: "map-south-station"},class:"map-menu-link"%>
-  </p>
-  </li>
-  <li>
-  <%= link_to "車で行く", "#",class:"map-menu-list"%>
-  <%= image_tag("map3.jpg") %>
-  <p class="map-menu-info"></p>
-  </li>
+    <li>
+      <%= link_to "小樽駅下車", '#',class:"map-menu-list" %>
+      <%= link_to  image_tag("map1.jpg"), '#'%>
+      <p class="map-menu-info">硝子館や小樽運河、小樽駅直結のバスから行けるおたる水族館や、天狗山目的の方におすすめです。<br/>
+        <%= link_to "改装中", '#',class:"map-menu-link"%>
+      </p>
+    </li>
+    <li>
+      <%= link_to "南小樽駅下車", {anchor: "map-south-station"},class:"map-menu-list"%>
+      <%= link_to image_tag("map2.jpg"), {anchor: "map-south-station"}  %>
+      <p class="map-menu-info">駅から見える海や、徒歩数分の圏内にあるオルゴール堂、小樽運河まで店舗が続いているのでおすすめです。<br/>
+        <%= link_to "詳細へ" ,{anchor: "map-south-station"},class:"map-menu-link"%>
+      </p>
+    </li>
+    <li>
+      <%= link_to "車で行く", "#",class:"map-menu-list"%>
+      <%= image_tag("map3.jpg") %>
+      <p class="map-menu-info"></p>
+    </li>
   </ul>
 </div>
-
-<div class ="map-otaru-station", id ="map-otaru-station">
-</div>
-
 
 <div class ="map-south-station", id ="map-south-station">
   <div class ="map-south-headline">
@@ -46,94 +42,88 @@
 
   <div class ="map-south-info">
     <div class ="map-south-left">
-    <div class ="map-south-main">
-      <h3>■小樽オルゴール堂本館</h3>
-      <ul>
-        <li>■営業時間：9:00 ~ 18:00</li>
-        <li>■電話番号：（0134）22-XXXX</li>
-        <li>■小樽市住吉町４番１号</li>
-        <li>昭和45年に建てられた小樽オルゴール堂本館の住まい。<br/>
-        ノスタルジックな空間でオルゴールの世界をお楽しみください。</li>
-      </ul>
+      <div class ="map-south-main">
+        <h3>■小樽オルゴール堂本館</h3>
+        <ul>
+          <li>■営業時間：9:00 ~ 18:00</li>
+          <li>■電話番号：（0134）22-XXXX</li>
+          <li>■小樽市住吉町４番１号</li>
+          <li>昭和45年に建てられた小樽オルゴール堂本館の住まい。<br/>
+          ノスタルジックな空間でオルゴールの世界をお楽しみください。
+          </li>
+        </ul>
       </div>
       <div class ="map-south-option">
-      <ul>
-      <li>
-      <%= image_submit_tag("beforelike.jpg",id:"like_count",class:"like")%>
-      </li>
-      <li><%= link_to "ご意見・ご要望", contacts_path %></li>
-      </ul>
-      <div class ="map-south-google">
-      <%= link_to "Google Mapで開く",
-      "https://www.google.com/maps/place/%E5%B0%8F%E6%A8%BD%E3%82%AA%E3%83%AB%E3%82%B4%E3%83%BC%E3%83%AB%E5%A0%82+%E6%9C%AC%E9%A4%A8/@43.1903412,141.0075187,19.71z/data=!4m21!1m15!4m14!1m6!1m2!1s0x5f0ae05eaca6a8a3:0x93e75da9fb9decc8!2z5YyX5rW36YGT5bCP5qi95biC5L2P5ZCJ55S677yR77yRIOWNl-Wwj-aovemnhQ!2m2!1d141.0077824!2d43.1867017!1m6!1m2!1s0x5f0ae05a5c0c6207:0xb4994e82f592e5c7!2z44CSMDQ3LTAwMTUg5YyX5rW36YGT5bCP5qi95biC5L2P5ZCJ55S677yU4oiS77yRIOWwj-aoveOCquODq-OCtOODvOODq-WggiDmnKzppKg!2m2!1d141.0078377!2d43.1905754!3m4!1s0x5f0ae05a5c0c6207:0xb4994e82f592e5c7!8m2!3d43.1905754!4d141.0078377",target: :_blank %>
-      </div>
+        <ul>
+          <li><%= image_submit_tag("beforelike.jpg",id:"like_count",class:"like")%></li>
+          <li><%= link_to "ご意見・ご要望", contacts_path %></li>
+        </ul>
+        <div class ="map-south-google">
+          <%= link_to "Google Mapで開く","https://www.google.com/maps/place/%E5%B0%8F%E6%A8%BD%E3%82%AA%E3%83%AB%E3%82%B4%E3%83%BC%E3%83%AB%E5%A0%82+%E6%9C%AC%E9%A4%A8/@43.1903412,141.0075187,19.71z/data=!4m21!1m15!4m14!1m6!1m2!1s0x5f0ae05eaca6a8a3:0x93e75da9fb9decc8!2z5YyX5rW36YGT5bCP5qi95biC5L2P5ZCJ55S677yR77yRIOWNl-Wwj-aovemnhQ!2m2!1d141.0077824!2d43.1867017!1m6!1m2!1s0x5f0ae05a5c0c6207:0xb4994e82f592e5c7!2z44CSMDQ3LTAwMTUg5YyX5rW36YGT5bCP5qi95biC5L2P5ZCJ55S677yU4oiS77yRIOWwj-aoveOCquODq-OCtOODvOODq-WggiDmnKzppKg!2m2!1d141.0078377!2d43.1905754!3m4!1s0x5f0ae05a5c0c6207:0xb4994e82f592e5c7!8m2!3d43.1905754!4d141.0078377",target: :_blank %>
+        </div>
       </div>
     </div>
     <div class ="map-south-right">
-    <%=image_tag("map4.jpg")%>
+      <%=image_tag("map4.jpg")%>
     </div>
   </div>
 
   <div class ="map-south-list">
     <div class="map-list-left">
-    <h2>【オルゴール堂から徒歩5分圏内】</h2>
-      <ul>
-        <li>
-        <%= link_to "【硝屋】",{anchor: "map-south-glass"}%>
-        <%= link_to image_tag("maplink1.jpg"),{anchor: "map-south-glass"} %>
-        </li>
-        <li>
-        <%= link_to "【オルゴール堂2号館】","#"%>
-        <%= link_to image_tag("maplink2.jpg"),"#" %>
-        </li>
-      </ul>
+      <h2>【オルゴール堂から徒歩5分圏内】</h2>
+        <ul>
+          <li>
+            <%= link_to "【硝屋】",{anchor: "map-south-glass"}%>
+            <%= link_to image_tag("maplink1.jpg"),{anchor: "map-south-glass"} %>
+          </li>
+          <li>
+            <%= link_to "【オルゴール堂2号館】","#"%>
+            <%= link_to image_tag("maplink2.jpg"),"#" %>
+          </li>
+        </ul>
     </div>
     <div class="map-list-right">
-    <h2>【オルゴール堂から徒歩15分圏内】</h2>
-      <ul>
-        <li>
-        <%= link_to "【洋菓子舗ルタオ本店】","#"%>
-        <%= link_to image_tag("maplink3.jpg"),"#" %>
-        </li>
-        <li>
-        <%= link_to "【北一硝子】","#"%>
-        <%= link_to image_tag("maplink4.jpg"),"#" %>
-        </li>
-      </ul>
+      <h2>【オルゴール堂から徒歩15分圏内】</h2>
+        <ul>
+          <li>
+            <%= link_to "【洋菓子舗ルタオ本店】","#"%>
+            <%= link_to image_tag("maplink3.jpg"),"#" %>
+          </li>
+          <li>
+            <%= link_to "【北一硝子】","#"%>
+            <%= link_to image_tag("maplink4.jpg"),"#" %>
+          </li>
+        </ul>
     </div>
   </div>
 
   <div class ="map-south-info" id ="map-south-glass">
     <div class ="map-south-left">
-    <div class ="map-south-main">
-      <h3>■硝屋（しょうや）</h3>
-      <ul>
-        <li>■営業時間：10:00 ~ 18:00</li>
-        <li>■電話番号：（0134）33-XXXX</li>
-        <li>■小樽市境町６番１２号</li>
-        <li>オリジナルアクセサリーをはじめ、道内作家の1点物の作品や天使ベル、<br/>
-        かわいい動物たちのミニチュアなど、さまざまな商品を取り揃えています。</li>
-      </ul>
+      <div class ="map-south-main">
+        <h3>■硝屋（しょうや）</h3>
+        <ul>
+          <li>■営業時間：10:00 ~ 18:00</li>
+          <li>■電話番号：（0134）33-XXXX</li>
+          <li>■小樽市境町６番１２号</li>
+          <li>オリジナルアクセサリーをはじめ、道内作家の1点物の作品や天使ベル、<br/>
+          かわいい動物たちのミニチュアなど、さまざまな商品を取り揃えています。</li>
+        </ul>
       </div>
       <div class ="map-south-option">
-      <ul>
-      <li>
-      <%= image_submit_tag("beforelike.jpg",id:"like_count",class:"like")%>
-      </li>
-      <li><%= link_to "ご意見・ご要望", contacts_path %></li>
-      </ul>
-      <div class ="map-south-google">
-      <%= link_to "Google Mapで開く",
-      "https://www.google.com/maps/dir/%E5%8C%97%E6%B5%B7%E9%81%93%E5%B0%8F%E6%A8%BD%E5%B8%82%E4%BD%8F%E5%90%89%E7%94%BA%EF%BC%94%E2%88%92%EF%BC%91+%E5%B0%8F%E6%A8%BD%E3%82%AA%E3%83%AB%E3%82%B4%E3%83%BC%E3%83%AB%E5%A0%82+%E6%9C%AC%E9%A4%A8/''/@43.1909911,141.006297,18z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x5f0ae05a5c0c6207:0xb4994e82f592e5c7!2m2!1d141.0078377!2d43.1905754!1m5!1m1!1s0x5f0ae05a8f35f2d9:0x966b41a07fd2bfc!2m2!1d141.0068832!2d43.1913868",target: :_blank %>
-      </div>
+        <ul>
+          <li><%= image_submit_tag("beforelike.jpg",id:"like_count",class:"like")%></li>
+          <li><%= link_to "ご意見・ご要望", contacts_path %></li>
+        </ul>
+        <div class ="map-south-google">
+          <%= link_to "Google Mapで開く","https://www.google.com/maps/dir/%E5%8C%97%E6%B5%B7%E9%81%93%E5%B0%8F%E6%A8%BD%E5%B8%82%E4%BD%8F%E5%90%89%E7%94%BA%EF%BC%94%E2%88%92%EF%BC%91+%E5%B0%8F%E6%A8%BD%E3%82%AA%E3%83%AB%E3%82%B4%E3%83%BC%E3%83%AB%E5%A0%82+%E6%9C%AC%E9%A4%A8/''/@43.1909911,141.006297,18z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x5f0ae05a5c0c6207:0xb4994e82f592e5c7!2m2!1d141.0078377!2d43.1905754!1m5!1m1!1s0x5f0ae05a8f35f2d9:0x966b41a07fd2bfc!2m2!1d141.0068832!2d43.1913868",target: :_blank %>
+        </div>
       </div>
     </div>
     <div class ="map-south-right">
-    <%=image_tag("maplink1.jpg")%>
+      <%=image_tag("maplink1.jpg")%>
     </div>
   </div>
 </div>
-
 </div>
 
 <%= render "shared/footer"%>
