--- a/app/views/otarues/index.html.erb
+++ b/app/views/otarues/index.html.erb
@@ -1,6 +1,6 @@
   <%= render "shared/header" %>
     <div class="main-top">
-      <%= video_tag("animation.MOV",muted: true,loop: true,autoplay: true,autobuffer: true, class:"video") %>
+      <%= video_tag("animation1.mov",muted: true,loop: true,autoplay: true,autobuffer: true, class:"video") %>
       <div class="main-catchcopy">
         <p> 海と芸術の街,<br/><br/>　　小樽に行きませんか？</p>
       </div>
