indexのヘッダーの色を調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,9 +21,10 @@
    font-family:serif;
    text-decoration: none;
   }
-
+a{
+  text-decoration: none;
+}
 body {
-  color: rgb(254, 246, 238);
   opacity:0.9;
 }
 .error{
