--- a/app/views/otarues/index.html.erb
+++ b/app/views/otarues/index.html.erb
@@ -1,4 +1,4 @@
-  <%= render "shared/header" %>
+  <%= render "shared/header-index" %>
     <div class="main-top">
       <%= video_tag("animation1.mov",muted: true,loop: true,autoplay: true,autobuffer: true, class:"video") %>
       <div class="main-catchcopy">
