--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -1,8 +1,8 @@
 .footer-top{
   width:100vw;
   height:5vh;
-  color:#28292b;
   text-align:center;
-  background:white;
-  opacity: 0.6;
+  p{
+    color:white;
+  }
 }
