動画のスライドショー実装

--- a/app/views/otarues/index.html.erb
+++ b/app/views/otarues/index.html.erb
@@ -1,8 +1,9 @@
   <%= render "shared/header-index" %>
     <div class="main-top">
-      <%= video_tag("animation1.mov",muted: true,loop: true,autoplay: true,autobuffer: true, class:"video") %>
+      <%= video_tag("animation3.mov",muted: true,loop: true,autoplay: true,autobuffer: true, id: "video-slide", class:"video") %>
       <div class="main-catchcopy">
         <p> 海と芸術の街,<br/><br/>　　小樽に行きませんか？</p>
+        <span id ="timer"></span>
       </div>
     </div>
 
