--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -13,13 +13,12 @@
     <%= link_to "ルートマップへ", maps_path, class: "about-btn" %>
   </div>
 
-
   <div class ="about-info-right">
     <div class ="about-img">
     <ul>
-      <li><%= image_tag("about1.jpg") %></li>
-      <li><%= image_tag("about2.jpg") %></li>
-      <li><%= image_tag("about3.jpg") %></li>
+      <li><%= image_tag("about1.jpg",class: "image-slide") %></li>
+      <li><%= image_tag("about3.jpg",class: "image-slide") %></li>
+      <li><%= image_tag("about5.jpg",class: "image-slide") %></li>
     </ul>
     </div>
   </div>
