ビューファイルの文言を修正

--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -5,8 +5,8 @@
     <p class = "about-headline"><br/>このサイトについて</p>
     <div class ="about-navi">
       小樽観光を検討されている方へ<br/><br/>
-      どういう経路で行けば良いか<br/>
-      満遍無く回ることが出来るかを記載しております<br/>
+      下車した駅から近い店舗や観光スポット、<br/>
+      どの経路が良いかを記載しております。<br/>
       <br/>
       参考にして頂ければ幸いです。<br/>
     </div>
