文章の変更

--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -7,7 +7,7 @@
     <p class ="map-info-small">
       クリックで該当の箇所までリンクします。<br>
       駅から近い順番で観光場所を記載しています。<br/>
-      私のおすすめは色んなお店がある南小樽駅！<br>
+      <b>※現在は南小樽駅のみ実装中です！</b><br>
     </p>
   </div>
 
